--- a/scrape.ipynb
+++ b/scrape.ipynb
@@ -19,6 +19,7 @@
     "all = \"allspaces\" # base + all\n",
     "id  = { # base + \"spaces/?lid=\" + id of desired library\n",
     "    \"chemistry\": 5903,\n",
+    "    \"funk\": 3604,\n",
     "    \"grainger\": 3606,\n",
     "    \"international\": 5766,\n",
     "    \"main\": 3608,\n",
@@ -29,7 +30,7 @@
     "\n",
     "# url to scrape\n",
     "url = base + \"spaces?lid=\" + str(id[\"chemistry\"]) + args\n",
-    "print(url)"
+    "print(url)\n"
    ]
   },
   {
@@ -49,7 +50,7 @@
     "# imports\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
-    "from webdriver_manager.chrome import ChromeDriverManager"
+    "from webdriver_manager.chrome import ChromeDriverManager\n"
    ]
   },
   {
@@ -64,7 +65,7 @@
     "# driver = webdriver.Chrome(ChromeDriverManager().install(), options=options)\n",
     "\n",
     "# non-headless version, for debugging\n",
-    "driver = webdriver.Chrome(ChromeDriverManager().install(), options=options)"
+    "driver = webdriver.Chrome(ChromeDriverManager().install(), options=options)\n"
    ]
   },
   {
@@ -74,7 +75,7 @@
    "outputs": [],
    "source": [
     "# navigate to url\n",
-    "driver.get(url)"
+    "driver.get(url)\n"
    ]
   },
   {
@@ -96,7 +97,7 @@
    "source": [
     "# extract data\n",
     "events = [ev.get_attribute(\"title\") for ev in driver.find_elements(By.CLASS_NAME, \"fc-event-today\")]\n",
-    "len(events)"
+    "len(events)\n"
    ]
   },
   {
@@ -117,7 +118,7 @@
    ],
    "source": [
     "for ev in events:\n",
-    "    print(ev)"
+    "    print(ev)\n"
    ]
   },
   {
@@ -127,7 +128,7 @@
    "outputs": [],
    "source": [
     "# quit driver, if running\n",
-    "driver.quit()"
+    "driver.quit()\n"
    ]
   },
   {
@@ -145,7 +146,7 @@
    "outputs": [],
    "source": [
     "# import\n",
-    "from requests_html import AsyncHTMLSession"
+    "from requests_html import AsyncHTMLSession\n"
    ]
   },
   {
@@ -157,7 +158,7 @@
     "# open session, navigate to page, and render JS\n",
     "session = AsyncHTMLSession()\n",
     "r = await session.get(url)\n",
-    "await r.html.arender()"
+    "await r.html.arender()\n"
    ]
   },
   {
@@ -179,7 +180,7 @@
    "source": [
     "# extract data\n",
     "events = [ev.attrs[\"title\"] for ev in r.html.find(\".fc-event-today\")]\n",
-    "len(events)"
+    "len(events)\n"
    ]
   },
   {
@@ -365,7 +366,7 @@
    ],
    "source": [
     "for ev in events:\n",
-    "    print(ev)"
+    "    print(ev)\n"
    ]
   },
   {
